@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 200
skinparam ranksep 240
skinparam padding 10

<style>
class {
  BackgroundColor #EAF3DE
  LineColor #639922
}
package {
  BackgroundColor #F4FBED
  LineColor #97C459
}
enum {
  BackgroundColor #FAEEDA
  LineColor #BA7517
}
</style>

package "negocio" {
  class Main {
    - in : Scanner
    - sistema : Sistema
    + {static} main(args: String[]) : void
    ~ run() : void
    ~ menu() : void
    + cadastrarMesa() : void
    + cadastrarGarcom() : void
    + cadastrarItemCardapio() : void
    + buscarMesaDisponivel() : void
    + fazerReserva() : void
    + abrirPedido() : void
    + adicionarItemAoPedido() : void
    + fecharContaEPagar() : void
    + mostrarTodasAsMesas() : void
    + mostrarTodosOsGarcons() : void
    + mostrarTodosOsItensCardapio() : void
  }

  class Sistema {
    - mesas : List<Mesa>
    - itensCardapio : List<ItemCardapio>
    - garcons : List<Garcom>
    - reservas : List<Reserva>
    - pedidos : List<Pedido>
    
    + getMesas() : List<Mesa>
    + getItensCardapio() : List<ItemCardapio>
    + getGarcons() : List<Garcom>
    + getReservas() : List<Reserva>
    + getPedidos() : List<Pedido>
    + cadastrarMesa(mesa: Mesa) : void
    + cadastrarGarcom(garcom: Garcom) : void
    + cadastrarItemCardapio(itemCardapio: ItemCardapio) : void
    + buscarMesaDisponivel(capacidadeDesejada: int, data: String, hora: String) : List<Mesa>
    - isMesaLivre(mesa: Mesa, data: String, hora: String) : boolean
    + fazerReserva(reserva: Reserva) : void
    + abrirPedido(pedido: Pedido) : void
    + abrirPedidoDelivery(pedidoDelivery: PedidoDelivery) : void
    + adicionarItemAoPedido(itemPedido: ItemPedido, pedido: Pedido) : void
    + atualizarStatusCozinha(itemPedido: ItemPedido, status: StatusItemPedido) : void
    + fecharConta(pedido: Pedido, incluirTaxa: boolean) : double
    + receberPagamento(pagamento: Pagamento, pedido: Pedido) : void
  }
}

package "dados" {
  enum LocalizacaoMesa {
    SALAO
    VARANDA
    MEZANINO
  }
  enum StatusReserva {
    PENDENTE
    CONFIRMADA
    EM_ANDAMENTO
    FINALIZADA
    CANCELADA
  }
  enum CategoriaItem {
    ENTRADAS
    PRATOS_PRINCIPAIS
    SOBREMESAS
    BEBIDAS_ALCOOLICAS
    BEBIDAS_NAO_ALCOOLICAS
  }
  enum StatusItemPedido {
    AGUARDANDO_PREPARO
    EM_PREPARO
    PRONTO
    SERVIDO
  }
  enum FormaPagamento {
    DINHEIRO
    CARTAO_CREDITO
    CARTAO_DEBITO
    PIX
  }
  enum StatusEntrega {
    PREPARANDO
    SAIU_PARA_ENTREGA
    ENTREGUE
  }

  class Mesa {
    - localizacao : LocalizacaoMesa
    - numero : int
    - capacidadePessoas : int
    + toString() : String
    + equals(obj: Object) : boolean
  }
  
  class Garcom {
    - nome : String
    - cpf : String
    - dataAdmissao : String
    - percentualComissao : double
    + toString() : String
    + equals(obj: Object) : boolean
  }
  
  class ItemCardapio {
    - categoria : CategoriaItem
    - componentes : List<ItemCardapio>
    - codigo : String
    - nome : String
    - descricao : String
    - preco : double
    - tempoMedioPreparo : int
    - disponivel : boolean
    + adicionarComponente(item: ItemCardapio) : void
    + toString() : String
    + equals(obj: Object) : boolean
  }
  
  class Reserva {
    - status : StatusReserva
    - mesas : List<Mesa>
    - nomeCliente : String
    - telefone : String
    - data : String
    - hora : String
    - numeroPessoas : int
    - observacoes : String
    + toString() : String
    + equals(obj: Object) : boolean
  }
  
  class ItemPedido {
    - statusPreparo : StatusItemPedido
    - itemCardapio : ItemCardapio
    - quantidade : int
    - observacoesCliente : String
    + calcularSubtotal() : double
    + toString() : String
    + equals(obj: Object) : boolean
  }
  
  class Pagamento {
    - formaUtilizada : FormaPagamento
    - dataHora : String
    - valorPago : double
    + toString() : String
    + equals(obj: Object) : boolean
  }
  
  class Pedido {
    # dataHoraAbertura : String
    # mesa : Mesa
    # garcom : Garcom
    # itensPedido : List<ItemPedido>
    # pagamentos : List<Pagamento>
    + adicionarItem(item : ItemPedido) : void
    + adicionarPagamento(pag : Pagamento) : void
    + calcularTotal(incluirTaxa: boolean) : double
    + toString() : String
    + equals(obj: Object) : boolean
  }
  
  class PedidoDelivery {
    - statusEntrega : StatusEntrega
    - enderecoEntrega : String
    - taxaEntrega : double
    + calcularTotal(incluirTaxa: boolean) : double
    + toString() : String
    + equals(obj: Object) : boolean
  }
}

Pedido <|-- PedidoDelivery

Main --> "1" Sistema : -sistema

Sistema --> "0..*" Mesa : -mesas
Sistema --> "0..*" ItemCardapio : -itensCardapio
Sistema --> "0..*" Garcom : -garcons
Sistema --> "0..*" Reserva : -reservas
Sistema --> "0..*" Pedido : -pedidos

Reserva "1" o-- "1..*" Mesa : -mesas
Pedido "1" *-- "1..*" ItemPedido : -itensPedido
Pedido "1" *-- "0..*" Pagamento : -pagamentos
Pedido --> "1" Mesa : -mesa
Pedido --> "1" Garcom : -garcom
ItemPedido --> "1" ItemCardapio : -itemCardapio
ItemCardapio "1" *-- "0..*" ItemCardapio : -componentes

Mesa ..> LocalizacaoMesa : -localizacao
Reserva ..> StatusReserva : -status
ItemCardapio ..> CategoriaItem : -categoria
ItemPedido ..> StatusItemPedido : -statusPreparo
Pagamento ..> FormaPagamento : -formaUtilizada
PedidoDelivery ..> StatusEntrega : -statusEntrega

@enduml